Fix for navbar on small screens and refactor counter

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -84,13 +84,10 @@ $dropDown       : true;
       .divider {
         background-color: $bgHighlight;}}}}
 @media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu {
-    > li > a {
-      color: $colDefault;
-      &:hover, &:focus {
-        color: $colHighlight; }}
-    > .active {
-      > a, > a:hover, > a:focus, {
-        color: $colHighlight;
-        background-color: $bgHighlight; }}}
-}
+  .container-fluid {
+    display: inline-flex;
+    jusifty-content: flex-start;
+    align-items: center;
+    font-size: .2em;
+    .col-md-offset-3 {
+      margin-left: 6em;}}}
